envoy/OpenCensus/envoy-local.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
tracing:
  http:
    name: envoy.tracers.opencensus
    typed_config:
      "@type": "type.googleapis.com/envoy.config.trace.v3.OpenCensusConfig"
      trace_config: 
        constant_sampler:
          decision: ALWAYS_PARENT
        max_number_of_attributes: "200"
        max_number_of_annotations: "200"
        max_number_of_message_events: "200"
        max_number_of_links: "200"
      incoming_trace_context:
        - B3
      outgoing_trace_context:
        - B3
      ocagent_exporter_enabled: true
      ocagent_address: "dns:localhost:55678"


static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        text_format_source:
                          inline_string: |
                            [%START_TIME%] "%REQ(traceparent)%" "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %REQUEST_TX_DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDR [...]
                      path: /dev/stdout
                  - name: envoy.access_loggers.open_telemetry
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
                      body:
                        stringValue: |
                          [%START_TIME%] "%REQ(traceparent)%" "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_A [...]
                      attributes:
                        values:
                          - key: "traceID"
                            value:
                              string_value: "%REQ(traceparent)%"
                      commonConfig:
                        grpcService:
                          envoyGrpc:
                            clusterName: otel-collector
                        logName: otel_envoy_accesslog
                        transportApiVersion: V3
                        customTags:
                          - tag: "deploy_type"
                            literal:
                              value: "binary"
                stat_prefix: ingress_http
                tracing: {}
                  # provider:
                  #   name: envoy.tracers.opentelemetry
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                  #     grpc_service:
                  #       envoy_grpc:
                  #         cluster_name: otel-collector
                  #       timeout: 0.250s
                  #     service_name: envoy-1
                # tracing:
                #   provider:
                #     name: envoy.tracers.zipkin
                #     typed_config:
                #       "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                #       collector_cluster: zipkin
                #       collector_endpoint: "/api/v2/spans"
                #       collector_endpoint_version: HTTP_JSON
                http_filters:
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: httpbin-ratelimit # must match domain in ratelimit ConfigMap
                      failure_mode_deny: false # run plugin in fail-open mode, no limiting happens if ratelimit is unavailable
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: rate_limit_service
                        transport_api_version: V3
                      response_headers_to_add:
                        - header:
                            key: x-global-ratelimit
                            value: rate_limit_service
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          name: "rl-test"
                          route:
                            cluster: service_protected_by_rate_limit
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: ":path"
                                      descriptor_key: "PATH"
                        - match: { prefix: "/foo2" }
                          route: { cluster: default_service }

    - name: staticreply-9080
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: staticreply-9081
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9081
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: rate_limit_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      connect_timeout: 10s
      load_assignment:
        cluster_name: rate_limit_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081

    - name: default_service
      load_assignment:
        cluster_name: default_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9080

    - name: service_protected_by_rate_limit
      load_assignment:
        cluster_name: service_protected_by_rate_limit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9081

    - name: otel-collector
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 0.25s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: otel-collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: otel-collector
                      port_value: 4317
    - name: zipkin
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: grafana
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: zipkin
                      port_value: 3000
